# python-lib-template

./: README.md  logging.yml  setup.cfg
src/thenamespace/apackage/: lib.py
tests/: test_lib.py
