[metadata]
name = thenamespace-apackage
version = attr: thenamespace.apackage.__version__
description = Does something mighty interesting.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0 License
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Intended Audience :: Information Technology

[options]
package_dir =
    = src
python_requires = >=3.9
packages = find_namespace:
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev = black >=22.0, <23.0;isort >= 5.10, <6.0;pytest >= 7.1, < 8.0
